--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Neutron</title>
+		<title>Aledany</title>
 		<meta charset="utf-8" />
 		<link href='images/Neutronfile.png' rel='icon' type='image/x-icon'/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,7 +18,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Neutron's Cydia Repo</h1>
+						<h1>Aledany's Cydia Repo</h1>
 					</header>
 
 				<!-- Main -->
@@ -29,11 +29,11 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-<h2>Home of Neutron</h2>
+<h2>Home of Aledany</h2>
 										</header>
 										<p>Tweaks, Themes and Apps</p>
 										<ul class="actions">
-											<li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2Felhizazi1.github.io/NF.io/" class="button">Add Repo</a></li>
+											<li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2Felhizazi1.github.io/Aledany.io/" class="button">Add Repo</a></li>
 <li><a href="depictions.html" class="button">Depictions</a></li>
 										</ul>
 									</div>
@@ -76,12 +76,12 @@
 					<footer id="footer">
 						<section>
 							<ul class="icons">
-								<center><li><a href="http://facebook.com/elhizazi1" class="icon fa-facebook alt"><span class="label">github</span></a></li></center>
+								<center><li><a href="http://facebook.com/hufa1" class="icon fa-facebook alt"><span class="label">github</span></a></li></center>
 							</ul>
 						</section>
 
 <div><center><h2><b>Notice</b></h2>
-<p>Please feel free to use the website code as a template for your repo. Contact me for help: @<a href="http://facebook.com/elhizazi1"><b><em>elhizazi1</em></b></a>. Thank you!</p></center>
+<p>Please feel free to use the website code as a template for your repo. Contact me for help: @<a href="http://facebook.com/hufa1"><b><em>hufa1</em></b></a>. Thank you!</p></center>
 </div>
 
 <hr>
