--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						</section>
 
 <div><center><h2><b>Notice</b></h2>
-<p>Please feel free to use the website code as a template for your repo. Contact me for help: @<a href="http://facebook.com/hu1fa"><b><em>hufa1</em></b></a>. Thank you!</p></center>
+<p>Please feel free to use the website code as a template for your repo. Contact me for help: @<a href="http://facebook.com/hu1fa"><b><em>hu1fa</em></b></a>. Thank you!</p></center>
 </div>
 
 <hr>
